--- a/oasis-webapp/src/main/java/oasis/web/SwaggerUI.get.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/SwaggerUI.get.html.hbs
@@ -3,23 +3,23 @@
 <head>
     <title>Swagger UI</title>
     <link href='//fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
-    <link href='swagger-ui/css/highlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
-    <link href='swagger-ui/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-    <script src="swagger-ui/lib/shred.bundle.js" type="text/javascript" /></script>
-    <script src='swagger-ui/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
-    <script src='swagger-ui/lib/jquery.slideto.min.js' type='text/javascript'></script>
-    <script src='swagger-ui/lib/jquery.wiggle.min.js' type='text/javascript'></script>
-    <script src='swagger-ui/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
-    <script src='swagger-ui/lib/handlebars-1.0.0.js' type='text/javascript'></script>
-    <script src='swagger-ui/lib/underscore-min.js' type='text/javascript'></script>
-    <script src='swagger-ui/lib/backbone-min.js' type='text/javascript'></script>
-    <script src='swagger-ui/lib/swagger.js' type='text/javascript'></script>
-    <script src='swagger-ui/swagger-ui.min.js' type='text/javascript'></script>
-    <script src='swagger-ui/lib/highlight.7.3.pack.js' type='text/javascript'></script>
+    <link href='{{basePath}}css/highlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
+    <link href='{{basePath}}css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
+    <script src="{{basePath}}lib/shred.bundle.js" type="text/javascript" /></script>
+    <script src='{{basePath}}lib/jquery-1.8.0.min.js' type='text/javascript'></script>
+    <script src='{{basePath}}lib/jquery.slideto.min.js' type='text/javascript'></script>
+    <script src='{{basePath}}lib/jquery.wiggle.min.js' type='text/javascript'></script>
+    <script src='{{basePath}}lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
+    <script src='{{basePath}}lib/handlebars-1.0.0.js' type='text/javascript'></script>
+    <script src='{{basePath}}lib/underscore-min.js' type='text/javascript'></script>
+    <script src='{{basePath}}lib/backbone-min.js' type='text/javascript'></script>
+    <script src='{{basePath}}lib/swagger.js' type='text/javascript'></script>
+    <script src='{{basePath}}swagger-ui.min.js' type='text/javascript'></script>
+    <script src='{{basePath}}lib/highlight.7.3.pack.js' type='text/javascript'></script>
     <script type="text/javascript">
         $(function () {
             window.swaggerUi = new SwaggerUi({
-              url: "{{basePath}}/{{apiPath}}",
+              url: "{{apiPath}}",
               dom_id: "swagger-ui-container",
               supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
               docExpansion: "none",
