Kibana link on homepage
Change-Id: I4f8a0c014ad0847fcb142888c0e7d806a5c995e4

--- a/oasis-webapp/src/main/java/oasis/web/Home.get.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/Home.get.html.hbs
@@ -6,6 +6,7 @@
 <body>
   <h1>Welcome!</h1>
   <p>API document is available at <a href="swagger-ui.html">/swagger-ui.html</a>
+  <p>Kibana is available <a href="kibana/">here</a> and comes with a <a href="kibana/index.html#/dashboard/file/logstash.json">default dashboard</a>
   <p>OAuth 2.0 / OpenID Connect 1.0 endpoints are:
   <ul>
     <li><code>/a/auth</code> for the Authorization Endpoint
