Some fixes of the AuthorizationEndpoint.
Scopes of the AuthorizedScopes model are now represented by a set and not a Java array.

Change-Id: Ice772d2ba1c92a6d4b1e887236247099ebbcbdd3

--- a/oasis-webapp/src/main/java/oasis/web/authz/Approve.get.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/authz/Approve.get.html.hbs
@@ -18,6 +18,7 @@
         </p>
         <ul>
             {{#each scopes.requiredScopes}}
+                <input type="hidden" name="scope" value="{{id}}" />
                 <dl>
                     <dt>{{title}}</dt>
                     <dd>{{description}}</dd>
@@ -37,7 +38,7 @@
         </p>
         <ul>
             {{#each scopes.optionalScopes}}
-            <input type="checkbox" name="scope" value="{{scope.code}}" />
+            <input type="checkbox" name="scope" value="{{id}}" />
             <dl>
                 <dt>{{title}}</dt>
                 <dd>{{description}}</dd>
