Add the authorized scopes in the authorization code, refresh token and access token.
Change-Id: I2c628c70330c1d11c3e96e1ccb6bd81f647a88fa

--- a/oasis-webapp/src/main/java/oasis/web/authz/Approve.get.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/authz/Approve.get.html.hbs
@@ -11,6 +11,7 @@
     <input type="hidden" name="_utf8" value="&#9731;" />
     <input type="hidden" name="continue" value="{{urls.continue}}" />
     <input type="hidden" name="client_id" value="{{app.id}}" />
+    <input type="hidden" name="scope" value="openid" />
 
     <div>
         <p>
