--- a/oasis-webapp/src/main/java/oasis/web/authn/Login.get.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/authn/Login.get.html.hbs
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>Login to OASIS</h1>
-<form method=POST action={{formAction}}>
+<form method=POST action=[[formAction]]>
 <input type="hidden" name="_utf8" value="&#9731;">
-<input type="hidden" name="continue" value="{{continue}}">
+<input type="hidden" name="continue" value="[[continue]]">
 <p>
 Enter an email and a password :
 <input type="email" name="u" placeholder="Email address">
@@ -16,9 +16,9 @@ Enter an email and a password :
 <button type="submit">Sign in</button>
 </p>
 
-{{#if errorMessage}}
+[[#if errorMessage]]
 <p style="color:red">
-{{errorMessage}}
+[[errorMessage]]
 </p>
-{{/if}}
+[[/if]]
 </form>
