Bootstrapify and Angularify the base template
- Add JQuery 2, Bootstrap 3, Lodash and AngularJS
- Add endpoints for CSS and JS files
- Add a CSS and JS main files

Change-Id: I2deee845da5370d1fb9c935e0abde7e61fc51dec

--- a/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
   <meta charset="utf-8">
   [[#block "title"]]
     <title>Oasis</title>
   [[/block]]
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootswatch/3.0.3/yeti/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   [[#block "content"]]
+  [[/block]]
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+  <script src="/js/vendor/lodash.min.js"></script>
+  <script src="/js/main.js"></script>
+  [[#block "controllers"]]
+    [[! Will be used by sub templates in order to add controllers ]]
+  [[/block]]
+  [[#block "directives"]]
+    [[! Will be used by sub templates in order to add directives ]]
   [[/block]]
 </body>
 </html>
