Don't display the script element for data initialization if there is not any initial data.
Change-Id: Ifb12a089656c572d2137a2b97cc70e27f9c6a5f3

--- a/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
@@ -13,9 +13,11 @@
   [[#block "content"]]
   [[/block]]
 
-  <script type="application/json" id="initial-data">
-    [[json initData]]
-  </script>
+  [[#if initData]]
+    <script type="application/json" id="initial-data">
+      [[json initData]]
+    </script>
+  [[/if]]
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
