--- a/oasis-webapp/src/main/java/oasis/web/authn/Login.get.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/authn/Login.get.html.hbs
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="passwordInput" class="col-sm-2 control-label">Email address</label>
+      <label for="passwordInput" class="col-sm-2 control-label">Password</label>
 
       <div class="col-sm-10">
         <input type="password" id="passwordInput" class="form-control" name="pwd" placeholder="Password" />
