Fix Handlebars delimiters in kibana configuration
Change-Id: Id9be5610e04376cb4e4afb2cff3ecb3edaa22539

--- a/oasis-webapp/src/main/java/oasis/web/kibana/Kibana.config.js.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/kibana/Kibana.config.js.hbs
@@ -1,12 +1,12 @@
-{{!
+[[!
   These is the app's configuration, If you need to configure the default dashboard, please see dashboards/default
-}}
+]]
 define(['settings'],
 function (Settings) {
 
   return new Settings({
 
-    {{!
+    [[!
       URL to your elasticsearch server. You almost certainly don't
       want 'http://localhost:9200' here. Even if Kibana and ES are on
       the same host
@@ -16,21 +16,21 @@ function (Settings) {
       elasticsearch host
       @type {String}
       elasticsearch: "http://"+window.location.hostname+":9200",
-    }}
-    elasticsearch: window.location.protocol + "//" + window.location.hostname + ":" + window.location.port + "/{{esPath}}",
+    ]]
+    elasticsearch: window.location.protocol + "//" + window.location.hostname + ":" + window.location.port + "/[[esPath]]",
 
-    {{!
+    [[!
       The default ES index to use for storing Kibana specific object
       such as stored dashboards
       @type {String}
-    }}
+    ]]
     kibana_index: "kibana-int",
 
-    {{!
+    [[!
       Panel modules available. Panels will only be loaded when they are defined in the
       dashboard, but this list is used in the "add panel" interface.
       @type {Array}
-    }}
+    ]]
     panel_names: [
       'histogram',
       'map',
