--- a/oasis-webapp/src/main/java/oasis/web/authz/Approve.get.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/authz/Approve.get.html.hbs
@@ -46,13 +46,13 @@
       </div>
     [[/if]]
 
-    [[#if scopes.alreadyGrantedScopes]]
+    [[#if scopes.authorizedScopes]]
       <div>
         <p>
           You have already authorized [[app.name]] to :
         </p>
         <ul>
-          [[#each scopes.alreadyGrantedScopes]]
+          [[#each scopes.authorizedScopes]]
             <dl>
               <dt>[[title]]</dt>
               <dd>[[description]]</dd>
