Fix the value of the gender in the profile page to be OpenID Connect specification compliant.
Change-Id: I6e102229736c6f7552f442e84966973d49c3f659

--- a/oasis-webapp/src/main/java/oasis/web/account/Profile.get.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/account/Profile.get.html.hbs
@@ -51,10 +51,10 @@
 
         <div class="col-sm-10">
           <label class="radio-inline">
-            <input type="radio" id="femaleInput" value="F" ng-model="userInfo.gender"> Female
+            <input type="radio" id="femaleInput" value="female" ng-model="userInfo.gender"> Female
           </label>
           <label class="radio-inline">
-            <input type="radio" id="maleInput" value="M" ng-model="userInfo.gender"> Male
+            <input type="radio" id="maleInput" value="male" ng-model="userInfo.gender"> Male
           </label>
           <label class="radio-inline">
             <input type="radio" id="unknownGenderInput" value="" ng-model="userInfo.gender"> Private
