--- a/oasis-webapp/src/main/java/oasis/web/authn/Login.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/authn/Login.html.hbs
@@ -7,21 +7,21 @@
   <h1>Login to OASIS</h1>
 
   <form method="POST" action="[[formAction]]" class="form-horizontal">
-    <input type="hidden" name="_utf8" value="&#9731;" />
-    <input type="hidden" name="continue" value="[[continue]]" />
+    <input type="hidden" name="_utf8" value="&#9731;">
+    <input type="hidden" name="continue" value="[[continue]]">
 
     <div class="form-group">
       <label for="emailInput" class="col-sm-2 control-label">Email address</label>
 
       <div class="col-sm-10">
-        <input type="email" id="emailInput" class="form-control" name="u" placeholder="Email address" />
+        <input type="email" id="emailInput" class="form-control" name="u" autofocus>
       </div>
     </div>
     <div class="form-group">
       <label for="passwordInput" class="col-sm-2 control-label">Password</label>
 
       <div class="col-sm-10">
-        <input type="password" id="passwordInput" class="form-control" name="pwd" placeholder="Password" />
+        <input type="password" id="passwordInput" class="form-control" name="pwd">
       </div>
     </div>
     <div class="form-group">
