Login page morphs into "re-enter your password" if already authenticated
Also fixes styling of "Cancel" link, and changes theme to Cosmo, as Yeti
doesn't handle form-control-static cleanly.

Change-Id: Ic1f880f5ef37fe55fc083fbdb4dd5447ccc37b05

--- a/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/Base.html.hbs
@@ -6,7 +6,7 @@
     <title>Oasis</title>
   [[/block]]
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootswatch/3.0.3/yeti/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootswatch/3.0.3/cosmo/bootstrap.min.css">
   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
