Strengthen consent page in case of missing title/desc for a scope
First, don't try to put nulls in an ImmutableMap (this was breaking tests).
Then also cope for an empty title (not description) in the template by
displaying the ID instead.

Change-Id: Ib6bc861d9ee6d6c2b342ca87dd375b8bf9d46e1c

--- a/oasis-webapp/src/main/java/oasis/web/authz/Approve.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/authz/Approve.html.hbs
@@ -24,7 +24,7 @@
         [[#each scopes.requiredScopes]]
           <input type="hidden" name="selected_scope" value="[[id]]">
           <dl>
-            <dt>[[title]]</dt>
+            <dt>[[#if title]][[title]][[else]][[id]][[/if]]</dt>
             <dd>[[description]]</dd>
           </dl>
         [[/each]]
@@ -44,7 +44,7 @@
           [[#each scopes.optionalScopes]]
             <input type="checkbox" name="selected_scope" value="[[id]]">
             <dl>
-              <dt>[[title]]</dt>
+              <dt>[[#if title]][[title]][[else]][[id]][[/if]]</dt>
               <dd>[[description]]</dd>
             </dl>
           [[/each]]
@@ -60,7 +60,7 @@
         <ul>
           [[#each scopes.authorizedScopes]]
             <dl>
-              <dt>[[title]]</dt>
+              <dt>[[#if title]][[title]][[else]][[id]][[/if]]</dt>
               <dd>[[description]]</dd>
             </dl>
           [[/each]]
