--- a/oasis-webapp/src/main/java/oasis/web/SwaggerUI.get.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/SwaggerUI.get.html.hbs
@@ -2,10 +2,12 @@
 <html>
 <head>
     <title>Swagger UI</title>
-    <link href='//fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
-    <link href='[[basePath]]css/highlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
+    <link href='[[basePath]]css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
     <link href='[[basePath]]css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-    <script src="[[basePath]]lib/shred.bundle.js" type="text/javascript" /></script>
+    <link href='[[basePath]]css/reset.css' media='print' rel='stylesheet' type='text/css'/>
+    <link href='[[basePath]]css/screen.css' media='print' rel='stylesheet' type='text/css'/>
+    <script type="text/javascript" src="[[basePath]]lib/shred.bundle.js"></script>
     <script src='[[basePath]]lib/jquery-1.8.0.min.js' type='text/javascript'></script>
     <script src='[[basePath]]lib/jquery.slideto.min.js' type='text/javascript'></script>
     <script src='[[basePath]]lib/jquery.wiggle.min.js' type='text/javascript'></script>
@@ -27,7 +29,9 @@
                 if(console) {
                   console.log("Loaded SwaggerUI")
                 }
-                $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+                $('pre code').each(function(i, e) {
+                  hljs.highlightBlock(e)
+                });
               },
               onFailure: function(data) {
                 if(console) {
@@ -43,7 +47,7 @@
     </script>
 </head>
 
-<body>
+<body class="swagger-section">
 <div id='header'>
     <div class="swagger-ui-wrap">
         <a id="logo" href="http://swagger.wordnik.com">swagger</a>
