Replace old Application with new Application/Instance/Service
Change-Id: Ife02378a8d2b7e0e53e35346f6de955fb3815cbe

--- a/oasis-webapp/src/main/java/oasis/web/authn/Logout.html.hbs
+++ b/oasis-webapp/src/main/java/oasis/web/authn/Logout.html.hbs
@@ -8,8 +8,8 @@
 
   [[#if app]]
   <p>You've signed out of <b>[[app.name]]</b></p>
-  [[#if continue]]
-  <p>If you signed out by mistake, you can <a href="[[continue]]">go back to <b>[[app.name]]</b></a> to log back in.</p>
+  [[#if service]]
+  <p>If you signed out by mistake, you can <a href="[[service.url]]">go back to <b>[[service.name]]</b></a> to log back in.</p>
   [[/if]]
   [[/if]]
 
