--- a/oasis-webapp/src/main/resources/oasis-ui/css/style.css
+++ b/oasis-webapp/src/main/resources/oasis-ui/css/style.css
@@ -61,17 +61,34 @@ img {
   overflow: auto;
 }
 
-.login,
+.joinus,
+.login {
+  float: left;
+  width: 49%;
+}
+
 .reauth {
   width: 49%;
   margin: auto;
 }
 
+.joinus {
+  border-right: 1px solid #999;
+}
+
+.joinus h1,
 .login h1 {
-  background: url(../images/picto_user.png) top left no-repeat;
   text-align: left;
   padding-left: 40px;
   padding-top: 5px;
+}
+
+.joinus h1 {
+  background: url(../images/picto_pen.png) top left no-repeat;
+}
+
+.login h1 {
+  background: url(../images/picto_user.png) top left no-repeat;
 }
 
 .reauth h1 {
