--- a/oasis-webapp/src/main/resources/oasis-ui/css/style.css
+++ b/oasis-webapp/src/main/resources/oasis-ui/css/style.css
@@ -1,4 +1,26 @@
-@import url("../fonts/fonts.css");
+@font-face {
+    font-family: 'dinregular';
+    src: url('../fonts/din-webfont.woff') format('woff'),
+         url('../fonts/din-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'dinlightalternate';
+    src: url('../fonts/din_lightalternate-webfont.woff') format('woff'),
+         url('../fonts/din_lightalternate-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'dinbold';
+    src: url('../fonts/din_bold-webfont.woff') format('woff'),
+         url('../fonts/din_bold-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {
   background: #626580;
